[package]
name = "lina-rs-macros"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Macros for Lina"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
